federated-prometheus/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: prometheus-mdt
  name: prometheus-mdt
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-mdt-tls
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  - name: web-tls
    port: 9091
    protocol: TCP
    targetPort: web-tls
  selector:
    app: prometheus
    prometheus: prometheus-mdt
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: prometheus-mdt
  name: thanos-mdt
spec:
  ports:
  - name: thanos
    port: 10902
    protocol: TCP
    targetPort: 10902
  selector:
    app: prometheus
    prometheus: prometheus-mdt
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
