federated-prometheus/thanos-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-mdt
spec:
  ports:
  - name: thanos
    port: 10902
    protocol: TCP
    targetPort: 10902
  selector:
    app: thanos-query
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-mdt-sidecar
spec:
  ports:
  - name: thanos
    port: 10902
    protocol: TCP
    targetPort: 10902
  - name: thanos-grpc
    port: 10901
    protocol: TCP
    targetPort: 10901
  selector:
    app: prometheus
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
