federated-prometheus/prometheus-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  name: prometheus-mdt
spec:
  port:
    targetPort: web-tls
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-mdt
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  name: thanos-mdt
spec:
  port:
    targetPort: thanos
  subdomain: ""
  to:
    kind: Service
    name: thanos-mdt
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
